@@ -33,6 +33,9 @@ import com.badlogic.gdx.setup.Executor.CharCallback;
  * @author badlogic
  * @author Tomski */
 public class GdxSetup {
+
+	static final String DEFAULT_ASSET_PATH = "assets";
+
 	public static boolean isSdkLocationValid (String sdkLocation) {
 		return new File(sdkLocation, "platforms").exists();
 	}
@@ -230,7 +233,7 @@ public class GdxSetup {
 	}
 
 	public void build (ProjectBuilder builder, String outputDir, String appName, String packageName, String mainClass,
-			Language language, String sdkLocation, CharCallback callback, List<String> gradleArgs) {
+			Language language, String assetPath, String sdkLocation, CharCallback callback, List<String> gradleArgs) {
 		Project project = new Project();
 
 		String packageDir = packageName.replace('.', '/');
@@ -270,8 +273,7 @@ public class GdxSetup {
 		}
 
 		// Assets
-		String assetPath = builder.modules.contains(ProjectType.ANDROID) ? "android/assets" : "core/assets";
-		project.files.add(new ProjectFile("android/assets/badlogic.jpg", assetPath + "/badlogic.jpg", false));
+		project.files.add(new ProjectFile("assets/badlogic.jpg", assetPath + "/badlogic.jpg", false));
 
 		// android project
 		if (builder.modules.contains(ProjectType.ANDROID)) {
@@ -498,12 +500,14 @@ public class GdxSetup {
 
 	private static void printHelp () {
 		System.out
-			.println("Usage: GdxSetup --dir <dir-name> --name <app-name> --package <package> --mainClass <mainClass> --sdkLocation <SDKLocation> [--excludeModules <modules>] [--extensions <extensions>]");
+			.println("Usage: GdxSetup --dir <dir-name> --name <app-name> --package <package> --mainClass <mainClass> --sdkLocation <SDKLocation> " +
+			"[--assetPath <assetPath>] [--excludeModules <modules>] [--extensions <extensions>]");
 		System.out.println("dir ... the directory to write the project files to");
 		System.out.println("name ... the name of the application");
 		System.out.println("package ... the Java package name of the application");
 		System.out.println("mainClass ... the name of your main ApplicationListener");
 		System.out.println("sdkLocation ... the location of your android SDK. Uses ANDROID_HOME if not specified. Ignored if android module is excluded");
+		System.out.println("assetPath ... the location assets are stored, relative to project root. Default \"assets\". Optional");
 		System.out.println("excludeModules ... the modules to exclude on the project generation separated by ';'. Optional");
 		System.out.println("extensions ... the extensions to include in the project separated by ';'. Optional");
 	}
@@ -650,10 +654,15 @@ public class GdxSetup {
 					languageEnum = l;
 				}
 			}
+
+			String assetPath;
+			if (params.containsKey("assetPath")) assetPath = params.get("assetPath");
+			else assetPath = DEFAULT_ASSET_PATH;
+
 			builder.buildProject(projects, dependencies);
 			builder.build(languageEnum);
 			new GdxSetup().build(builder, params.get("dir"), params.get("name"), params.get("package"), params.get("mainClass"), languageEnum,
-				sdkLocation, new CharCallback() {
+				assetPath, sdkLocation, new CharCallback() {
 					@Override
 					public void character (char c) {
 						System.out.print(c);
